FIX: Model class loading issue